--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.44.3",
     "cloudinary-react-native": "^1.0.0",
     "expo": "~51.0.18",
     "expo-font": "~12.0.7",
